--- a/library.css
+++ b/library.css
@@ -19,7 +19,7 @@ main{
   color:white;
   position:relative ; 
 }
-h1,h2,h3,h4,button, input[type ="button"] {
+h1,h2,h3,h4,button, input[type ="button"], .name{
 		font-family: 'Prata', serif !important;
 }
 header div{
